Fixed bugs as reported by FindBugs in nephele-management